--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,7 @@ distlib==0.4.0
 dj-database-url==3.0.1
 Django==5.2.7
 django-environ==0.12.0
+django-filter==24.3
 djangorestframework==3.14.0
 django-cors-headers==4.3.1
 fastapi==0.119.0
